--- a/app.scss
+++ b/app.scss
@@ -1,85 +1,5 @@
-@import "@material/radio/mdc-radio";
-@import "@material/ripple/mdc-ripple";
-@import "@material/toolbar/mdc-toolbar";
-@import "@material/typography/mdc-typography";
-@import "@material/button/mdc-button";
-@import "@material/layout-grid/mdc-layout-grid";
-@import "@material/form-field/mdc-form-field";
-@import "@material/checkbox/mdc-checkbox";
-@import "@material/select/mdc-select";
-@import "@material/textfield/mdc-text-field";
-@import "@material/elevation/mdc-elevation";
-@import "custom.scss";
+@import "style/mdc-custom";
+@import "style/login";
+@import "style/custom.scss";
+@import "style/index";
 
-$small: 408px;
-
-@mixin flex($justify:center, $flow:row nowrap ){
-    display: flex;
-    flex-flow: $flow;
-    align-items: center;
-    justify-content: $justify;
-}
-
-.mdc-toolbar{
-    @include mdc-toolbar-fill-color(#00897b);
-}
-
-.mdc-button{
-    @include mdc-button-icon-color(#00897b);
-    @include mdc-states-base-color(#00897b);
-}
-
-.flex {
-    @include flex;
-    .content{
-        margin-top: 10px;
-    }
-}
-
-.wrap{
-    @include flex(flex-start);
-}
-
-.arrow-button{
-    i{
-        transform: scale(3);
-    }
-}
-
-.breaker{
-    @include flex(space-between);
-
-    @media screen and (max-width:650px){
-        @include flex(central, column wrap);        
-    }
-}
-
-.central-container{
-    
-    @media screen and (max-width: $small) {
-        @include flex;
-    }
-}
-
-#exibirId{
-    margin-right: 10px;
-}
-
-.no-link{
-    color: #fff;
-    &:hover{
-        text-decoration: none;
-    }
-}
-
-#fieldset{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#buttons{
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-}
