--- a/style/login.scss
+++ b/style/login.scss
@@ -4,25 +4,25 @@
 }
 
 
-#fieldset, .html-resize{
+#login-fieldsetId, .html-resize{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-#fieldset{
+#login-fieldsetId{
     width: 300px;
     height: 300px;
-    background-color: white;
-    box-shadow: 0px 0px 2px 1px rgba(105, 105, 105, 0.3);
-
+    
 }
 
-#buttons{
-    width: 80%;
+
+#login-buttonsId{
+    width: 80% !important;
     margin-top: 45px;
     display: flex;
     justify-content: space-between;
     flex-direction: row-reverse;
+
 }
