--- a/style/reserva.scss
+++ b/style/reserva.scss
@@ -13,72 +13,7 @@
     width: 280px !important;
 }
 
-
-.multiselect {
-    width: 200px;
-}
-
-.selectBox {
-    position: relative;
-}
-
-.selectBox select {
-    width: 100%;
-}
-
-.overSelect {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-}
-
-#checkboxes {
-    display: none;
-    border: 1px #dadada solid;
-    height:150px;
-    overflow:scroll;
-}
-
-#checkboxes label {
-    display: block;
-}
-
-#checkboxes label:hover {
-    background-color: #1e90ff;
-}
-
-#multiSelectId{
-    width:170px;
-}
-
-.vAligned{
-    display:flex;
-    vertical-align: top;
-    justify-content: space-around;
-
-    label{
-        position: relative;
-        top:10px;
-        left:5px;
-        width:100%;
-        
-        -webkit-touch-callout: none;
-        -webkit-user-select: none;
-        -khtml-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-
-        &:hover{
-            background-color: rgba(0,0,0,0) !important;
-        }
-
-    }
-}
-
-#fieldset{
+#fieldsetId{
     height: 380px;
 
     > *{
@@ -87,6 +22,41 @@
 
 }
 
-.fix-width{
-    width: 150px;
+
+
+#reserve-buttonsId{
+    width:100%;
+
+    text-align: right;
+
+    @media screen and (max-width: 420px){
+        .mdc-button{
+            width:100%;
+            
+        }
+        text-align:unset;
+
+    }
+}
+
+#reserve-bodyId {
+    background-color: rgb(255,255,255);
+    
+    > section{
+        background-color: rgb(255,255,255);
+        
+    }
+}
+
+
+#reserve-formId {
+    display:flex;
+    flex-direction: column; 
+    justify-content: center; 
+    align-items:center;
+}
+
+#select-labsId .mui-select__menu{
+    top: 10px !important;
+    height: 210px !important;
 }
