--- a/style/index.scss
+++ b/style/index.scss
@@ -8,7 +8,7 @@ $small: 408px;
 }
 
 
-html, section{
+.grey-section-html, .grey-section-html section{
     background-color: rgba(0, 0, 0, 0.03);
 }
 
