--- a/style/mdc-custom.scss
+++ b/style/mdc-custom.scss
@@ -1,3 +1,9 @@
+$mdc-theme-primary: #00897b;
+
+@import "@material/theme/mdc-theme";
+
+
+@import "@material/dialog/mdc-dialog.scss";
 @import "@material/radio/mdc-radio";
 @import "@material/ripple/mdc-ripple";
 @import "@material/toolbar/mdc-toolbar";
@@ -10,9 +16,8 @@
 @import "@material/textfield/mdc-text-field";
 @import "@material/elevation/mdc-elevation";
 
-$mdc-theme-primary: #00897b;
 
-@import "@material/theme/mdc-theme";
+
 
 .mdc-toolbar{
     @include mdc-toolbar-fill-color(#00897b);
