Aprendendo a usar o git no vscode D:

--- a/style/index.scss
+++ b/style/index.scss
@@ -59,3 +59,11 @@ $small: 408px;
     }
 }
 
+section > *{
+    padding: 20px;
+}
+
+#lab-panel-id ul{
+    display: flex;
+    justify-content: center;
+}
