--- a/style/reserva.scss
+++ b/style/reserva.scss
@@ -11,11 +11,13 @@
 
 .datepicker{
     width: 150px !important;
+    overflow: visible ;
 }
+
 
 #fieldsetId{
     height: max-content;
-    width: 310px;
+    width: 320px;
 
     > *{
         margin-bottom: 15px;
@@ -85,7 +87,7 @@
 #checkboxes{
     position: absolute !important;
 
-    top: 350px !important;
+    top: 210px !important;
     z-index: 100000 !important;
 }
 
