Some implements and sign up page

--- a/app.scss
+++ b/app.scss
@@ -1,5 +1,6 @@
 @import "style/mdc-custom";
 @import "style/login";
+@import "style/cadastro";
 @import "style/custom.scss";
 @import "style/index";
 @import "style/reserva";
