--- a/style/table-material.scss
+++ b/style/table-material.scss
@@ -43,7 +43,7 @@ table, th, td {
     display: table-cell;
     text-align: left;
     vertical-align: middle;
-    border-radius: 2px;
+    //border-radius: 2px;
   }
   
   @media only screen and (max-width: 992px) {
