--- a/style/mdc-custom.scss
+++ b/style/mdc-custom.scss
@@ -26,11 +26,17 @@ $mdc-theme-primary: #00897b;
     @include mdc-toolbar-fill-color(#00897b);
 }
 
+
 .mdc-button{
     @include mdc-button-icon-color(#00897b);
     @include mdc-states-base-color(#00897b);
 
     @include mdc-button-container-fill-color(#00897b);
+}
+
+
+.white-button{
+    @include mdc-button-container-fill-color(#fff);
 }
 
 .mdc-text-field{
