--- a/app.scss
+++ b/app.scss
@@ -3,6 +3,7 @@
 @import "style/cadastro";
 @import "style/custom.scss";
 @import "style/index";
+@import "style/avaliacao-reserva";
 @import "style/reserva";
 @import "style/multi-select";
 @import "style/table-material";
