--- a/style/mdc-custom.scss
+++ b/style/mdc-custom.scss
@@ -86,7 +86,7 @@ $mdc-theme-primary: #00897b;
         width: 30%;   
     }
 
-    section:nth-child(3), section:nth-child(4){
+    section:nth-child(3), section:nth-child(4),section:nth-child(5){
         width:15%;
     }
 
@@ -120,28 +120,109 @@ $mdc-theme-primary: #00897b;
 
 
 .mdc-menu{
-    margin-top: 45px !important;
+    position:absolute;
+    //margin-top: 45px !important;
 
-    z-index: 0;
-    
-    background-color:#00897b;
-    
+    top: 45px;
+    right:0px;
+
+    z-index: 30;
+        
+
+    a{
+        // @include mdc-list-item-primary-text-ink-color(black);
+        // @include mdc-list-item-secondary-text-ink-color(black); 
+        color:black !important;
+    }
+    .no-link:hover{
+        color: black !important;
+    }
+}
+
+body{
     @media screen and (max-width:650px){
-        position:absolute;
 
-        top:15px;
-        left:0px;
+        
         
         width:100%;
+        .mdc-menu{
+            animation-name: menu-web-to-mobile;
+            animation-duration: 0.1s;
+            
+            left:0px;
+            top:0px;
 
-        .mdc-list-item{
-            height:120px;
+            width:100%;
+
+            transform: scale(1.1);
+
+            .mdc-list-item{
+                display: flex;
+                justify-content: space-around;
+                height:120px;
+             
+
+
+                
+            }
+
         }
-
     }
-    .mdc-list-item{
-        background-color:#00897b;
-        color: #fff;
+}
 
+@keyframes menu-web-to-mobile{
+    0%{
+        top: 45px;
+        left:50%;
+        right:0px;
+        width:100px;
+        opacity: 0;
+    }
+
+    // 15%{
+    //     transform: rotate(125deg) scale(0.1);
+    // }
+
+    // 18%{
+    //     transform: rotate(125deg) scale(2);
+    // }
+
+    // 25%{
+    //     transform: rotate(365deg) scale(12);
+    //     background-color: purple;
+    // }
+
+    // 36%{
+    //     transform: rotate(-125deg) scale(0.2);
+    //     background-color:  dimgrey;
+    // }
+
+    50%{
+        transform: scale(1.1);
+    }
+    // 55%{
+    //     transform: rotate(-125deg) scale(4);
+    //     background-color: yellowgreen;
+    // }
+
+    // 77%{
+    //     transform: rotate(125deg) scale(0.3);
+    //     background-color: black;
+    // }
+    // 87%{
+    //     transform: rotate(365deg) scale(8);
+    //     background-color: red;
+    // }
+
+    // 94%{
+    //     transform: rotate(-365deg) scale(1);
+    //     background-color: black;
+    // }
+
+    100%{
+        left:0px;
+        top:0px;
+        width:100%;
+        opacity:1;        
     }
 }
